fix text align problem

--- a/4th brief/style.css
+++ b/4th brief/style.css
@@ -9,7 +9,7 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: local;
-  text-align: webkit-center;
+  text-align: -webkit-center;
 }
 
 @font-face {
@@ -167,7 +167,7 @@ input[type="text"]:focus {
   max-width: 15px;
 }
 
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 900px) {
   .header {
     width: 45%;
     float: left;
